<resources>

    <string name="app_name" translatable="false">Pushes Test</string>

    <string name="title_activity_compose_main" translatable="false">ComposeMainActivity</string>

    <string name="lbl_send_notification">Send Notification</string>
    <string name="lbl_stop_sending">Stop</string>
    <string name="lbl_close">Close</string>

    <string name="hint_notification_title">Notification Title</string>
    <string name="hint_notification_body">Notification Text</string>
    <string name="hint_expandable">Expand for details</string>

    <string name="advanced">Advanced setup</string>
    <string name="use_mock_data">Use mock data</string>
    <string name="overwrite">Overwrite</string>
    <string name="vibration">Vibration</string>
    <string name="multiline_text">Multiline</string>
    <string name="sending_periods">Sending periods:</string>
    <string name="sending_delays">Sending delays:</string>
    <string name="notification_importance">Notification importance:</string>


    <!-- Warnings and Infos -->
    <string name="snack_notif_sent">Notification sent!</string>
    <string name="snack_action_dismiss_all">Dismiss All</string>
    <string name="settings_reset_msg">Settings reset to defaults</string>
    <string name="warn_empty_fields">Sending notification with empty fields…</string>
    <string name="warn_empty_notif">Sending empty notification for testing…</string>
    <string name="snack_scheduled">Notification scheduled in %1$d seconds</string>
    <string name="snack_periodic_stopped">Periodic testing stopped</string>
    <string name="warn_allow_full_screen_intent">Please allow Full-Screen Intents in settings to test this feature.</string>
    <string name="warn_grant_full_screen">Please allow Full-Screen Intents in settings to test this feature.</string>
    <string name="warn_overwrite_disabled">Overwrite disabled: Unique IDs are required for Full-Screen Intent.</string>

    <string name="info">Info</string>
    <string name="msg_battery_unrestricted_instruction">To comply with Play Store policies, please manually find Pushes Test in the list and set it to \"Unrestricted\".</string>

    <!-- Permissions -->
    <string name="permission_is_already_allowed">Permission is already allowed by user</string>
    <string name="permission_is_permanently_denied">Permission is permanently denied by user</string>
    <string name="permission_allowed">Permission allowed by user</string>

    <string name="please_fill_notification_title">Please fill notification title</string>
    <string name="please_fill_notification_text">Please fill notification text</string>
    <string name="settings">Settings</string>

    <!-- Notification Content & Style -->
    <string name="lbl_use_big_text">Use BigText Style</string>
    <string name="lbl_show_subtext">Show SubText</string>
    <!--    <string name="lbl_show_content_info">Show ContentInfo (Legacy)</string>-->
    <string name="lbl_show_large_icon">Show Large Icon</string>
    <string name="lbl_show_big_picture">Show BigPicture Style</string>
    <string name="lbl_use_inbox_style">Use Inbox Style (Line list)</string>
    <string name="lbl_group_notifications">Group notifications</string>
    <string name="lbl_use_chronometer">Use chronometer (Timer style)</string>

    <!-- Notification Behavior -->
    <string name="lbl_enable_sound">Enable Default Sound</string>
    <string name="lbl_enable_led">Blink LED</string>
    <string name="lbl_is_persistent">Persistent (Non-swipeable)</string>
    <string name="lbl_include_actions">Include Action Buttons</string>
    <string name="lbl_full_screen_intent">Full-screen intent (Alarm style)</string>

    <!-- Lock Screen Visibility Labels -->
    <string name="lbl_lockscreen_visibility">Lock Screen Visibility</string>


    <!-- Category Headers -->
    <string name="header_behavior">Behavior</string>
    <string name="header_timing">Timing</string>
    <string name="header_visual_style">Visual Style</string>
    <string name="header_sensory">Sensory</string>
    <string name="header_system_config">System Config</string>

    <string-array name="visibility_array">
        <item>Public (Show all content)</item>
        <item>Private (Hide sensitive content)</item>
        <item>Secret (Hide completely)</item>
    </string-array>

    <string-array name="importance_array">
        <item>Urgent</item>
        <item>High</item> <!-- Default -->
        <item>Medium</item>
        <item>Low</item>
        <!--        <item>None</item>-->
    </string-array>

    <string-array name="periods_array">
        <item>Single-shot</item> <!-- Default -->
        <item>Every 10 seconds</item>
        <item>Every 30 seconds</item>
        <item>Every other minute</item>
    </string-array>

    <string-array name="delays_array">
        <item>No delay</item> <!-- Default -->
        <item>10 sec. delay</item>
        <item>30 sec. delay</item>
        <item>60 sec. delay</item>
    </string-array>

</resources>